packages/qwik/src/optimizer/core/src/snapshots/qwik_core__test__should_extract_multiple_qrls_with_item_and_index_and_capture_ref.snap
---
source: packages/qwik/src/optimizer/core/src/test.rs
assertion_line: 5026
expression: output
---
==INPUT==


import { component$, useSignal } from '@qwik.dev/core';

export default component$(() => {
  const foo = useSignal('hi');
  const bar = useSignal('ho');
  const loop: string[] = ['abcd', 'xyz'];
  return (
    <div>
      {loop.map((item, index) => {
        return <div onClick$={() => console.log(item, foo.value)} onHover$={() => console.log(bar.value, index)}>{item}</div>
      })}
    </div>
  );
});


============================= test.js ==

import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
//
const _qrl_test_component_LUXeXe0DQrg = /*#__PURE__*/ qrl(()=>import("./test.tsx_test_component_LUXeXe0DQrg"), "test_component_LUXeXe0DQrg");
//
export default /*#__PURE__*/ componentQrl(_qrl_test_component_LUXeXe0DQrg);


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;;AAGA,6BAAe,8CAWZ\"}")
============================= test.tsx_test_component_div_div_q_e_hover_2iHUE4xtgo8.js (ENTRY POINT)==

import { _captures } from "@qwik.dev/core";
//
export const test_component_div_div_q_e_hover_2iHUE4xtgo8 = (_, _1, _2, index)=>{
    const bar = _captures[0];
    return console.log(bar.value, index);
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;4DAU4E,YADrD;;WAC2D,QAAQ,GAAG,CAAC,IAAI,KAAK,EAAE\"}")
/*
{
  "origin": "test.tsx",
  "name": "test_component_div_div_q_e_hover_2iHUE4xtgo8",
  "entry": null,
  "displayName": "test.tsx_test_component_div_div_q_e_hover",
  "hash": "2iHUE4xtgo8",
  "canonicalFilename": "test.tsx_test_component_div_div_q_e_hover_2iHUE4xtgo8",
  "path": "",
  "extension": "js",
  "parent": "test_component_LUXeXe0DQrg",
  "ctxKind": "eventHandler",
  "ctxName": "onHover$",
  "captures": true,
  "loc": [
    329,
    364
  ],
  "paramNames": [
    "_",
    "_1",
    "_2",
    "index"
  ],
  "captureNames": [
    "bar"
  ]
}
*/
============================= test.tsx_test_component_div_div_q_e_click_Mc600uqO6ps.js (ENTRY POINT)==

import { _captures } from "@qwik.dev/core";
//
export const test_component_div_div_q_e_click_Mc600uqO6ps = (_, _1, item)=>{
    const foo = _captures[0];
    return console.log(item, foo.value);
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;4DAU8B,QADb;;WACmB,QAAQ,GAAG,CAAC,MAAM,IAAI,KAAK\"}")
/*
{
  "origin": "test.tsx",
  "name": "test_component_div_div_q_e_click_Mc600uqO6ps",
  "entry": null,
  "displayName": "test.tsx_test_component_div_div_q_e_click",
  "hash": "Mc600uqO6ps",
  "canonicalFilename": "test.tsx_test_component_div_div_q_e_click_Mc600uqO6ps",
  "path": "",
  "extension": "js",
  "parent": "test_component_LUXeXe0DQrg",
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": true,
  "loc": [
    283,
    317
  ],
  "paramNames": [
    "_",
    "_1",
    "item"
  ],
  "captureNames": [
    "foo"
  ]
}
*/
============================= test.tsx_test_component_LUXeXe0DQrg.js (ENTRY POINT)==

import { _jsxSorted } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import { useSignal } from "@qwik.dev/core";
//
const _qrl_test_component_div_div_q_e_click_Mc600uqO6ps = /*#__PURE__*/ qrl(()=>import("./test.tsx_test_component_div_div_q_e_click_Mc600uqO6ps"), "test_component_div_div_q_e_click_Mc600uqO6ps");
const _qrl_test_component_div_div_q_e_hover_2iHUE4xtgo8 = /*#__PURE__*/ qrl(()=>import("./test.tsx_test_component_div_div_q_e_hover_2iHUE4xtgo8"), "test_component_div_div_q_e_hover_2iHUE4xtgo8");
//
export const test_component_LUXeXe0DQrg = ()=>{
    const foo = useSignal('hi');
    const bar = useSignal('ho');
    const loop = [
        'abcd',
        'xyz'
    ];
    const test_component_div_div_q_e_click_Mc600uqO6ps = _qrl_test_component_div_div_q_e_click_Mc600uqO6ps.$withCaptures$([
        foo
    ]);
    const test_component_div_div_q_e_hover_2iHUE4xtgo8 = _qrl_test_component_div_div_q_e_hover_2iHUE4xtgo8.$withCaptures$([
        bar
    ]);
    return /*#__PURE__*/ _jsxSorted("div", null, null, loop.map((item, index)=>{
        return /*#__PURE__*/ _jsxSorted("div", {
            "q-e:click": test_component_div_div_q_e_click_Mc600uqO6ps,
            "q-e:hover": test_component_div_div_q_e_hover_2iHUE4xtgo8,
            "q:ps": [
                item,
                index
            ]
        }, null, item, 4, "u6_0");
    }), 1, "u6_1");
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;;;;0CAG0B;IACxB,MAAM,MAAM,UAAU;IACtB,MAAM,MAAM,UAAU;IACtB,MAAM,OAAiB;QAAC;QAAQ;KAAM;;;;;;;IACtC,qBACE,WAAC,mBACE,KAAK,GAAG,CAAC,CAAC,MAAM;QACf,qBAAO,WAAC;YAAI,WAAQ;YAAsC,WAAQ;;gBADzD;gBAAM;;iBAC2F;IAC5G;AAGN\"}")
/*
{
  "origin": "test.tsx",
  "name": "test_component_LUXeXe0DQrg",
  "entry": null,
  "displayName": "test.tsx_test_component",
  "hash": "LUXeXe0DQrg",
  "canonicalFilename": "test.tsx_test_component_LUXeXe0DQrg",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    85,
    406
  ]
}
*/
== DIAGNOSTICS ==

[]
